Fixing swagger documentation configuration
